objects/AOPS_Account_BSD_Addendum__c.object
<CustomObject>
    <fields>
        <fullName>CCU007F_6OR7_PRODUCT_IND__c</fullName>
        <label>CCU007F_6OR7_PRODUCT_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ABV_PROD_SRC_CODE__c</fullName>
        <label>CCU007F_ABV_PROD_SRC_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ADDL_SALESPERSON_IND__c</fullName>
        <label>CCU007F_ADDL_SALESPERSON_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ADDR_CONTRACT_CODE__c</fullName>
        <label>CCU007F_ADDR_CONTRACT_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ADDR_ORDER_REST_IND__c</fullName>
        <label>CCU007F_ADDR_ORDER_REST_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_AOPD_FLAG__c</fullName>
        <label>CCU007F_AOPD_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_AR_FAX_CONT_SEQ__c</fullName>
        <label>CCU007F_AR_FAX_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_AR_FLAG__c</fullName>
        <label>CCU007F_AR_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_AR_PHONE_CONT_SEQ__c</fullName>
        <label>CCU007F_AR_PHONE_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_AVAIL_CREDIT__c</fullName>
        <label>CCU007F_AVAIL_CREDIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_BACKORDER_ALLOW_FLAG__c</fullName>
        <label>CCU007F_BACKORDER_ALLOW_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_BILL_TO_DOLLARS__c</fullName>
        <label>CCU007F_BILL_TO_DOLLARS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_BILL_TO_DOLLAR_EXPIRE__c</fullName>
        <label>CCU007F_BILL_TO_DOLLAR_EXPIRE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_BILL_TO_LIMIT__c</fullName>
        <label>CCU007F_BILL_TO_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_BUYING_GROUP_IND__c</fullName>
        <label>CCU007F_BUYING_GROUP_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CANDO_FROM_XREF__c</fullName>
        <label>CCU007F_CANDO_FROM_XREF</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_COMMISSION_FLAG__c</fullName>
        <label>CCU007F_COMMISSION_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CONTRACT_CODE__c</fullName>
        <label>CCU007F_CONTRACT_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_COST_CODE__c</fullName>
        <label>CCU007F_COST_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CREATE_DATE__c</fullName>
        <label>CCU007F_CREATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CREATE_ID__c</fullName>
        <label>CCU007F_CREATE_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CREDIT_CODE__c</fullName>
        <label>CCU007F_CREDIT_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CUSTOMER_COMM__c</fullName>
        <label>CCU007F_CUSTOMER_COMM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCU007F_CUSTOMER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_DEPARTMENT_IND__c</fullName>
        <label>CCU007F_DEPARTMENT_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_DEPT_REQUIRED_CODE__c</fullName>
        <label>CCU007F_DEPT_REQUIRED_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FAX_INV_CODE__c</fullName>
        <label>CCU007F_FAX_INV_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FAX_PO_CODE__c</fullName>
        <label>CCU007F_FAX_PO_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FAX_REORDER_CODE__c</fullName>
        <label>CCU007F_FAX_REORDER_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FAX_SHIP_CONFIRMATION__c</fullName>
        <label>CCU007F_FAX_SHIP_CONFIRMATION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FIELD_HEADER_IND__c</fullName>
        <label>CCU007F_FIELD_HEADER_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FILLER__c</fullName>
        <label>CCU007F_FILLER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FISCAL_YEAR_END_MONTH__c</fullName>
        <label>CCU007F_FISCAL_YEAR_END_MONTH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FORMS_FLAG__c</fullName>
        <label>CCU007F_FORMS_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_FREIGHT_CHG_REQ_FLAG__c</fullName>
        <label>CCU007F_FREIGHT_CHG_REQ_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_LINE_LIMIT__c</fullName>
        <label>CCU007F_LINE_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_LOCATION_IND__c</fullName>
        <label>CCU007F_LOCATION_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_LOCATION_REQ_CODE__c</fullName>
        <label>CCU007F_LOCATION_REQ_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_MANAFEST_FLAG__c</fullName>
        <label>CCU007F_MANAFEST_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_MIN_DISCOUNT__c</fullName>
        <label>CCU007F_MIN_DISCOUNT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_MIN_GP_PERCENT__c</fullName>
        <label>CCU007F_MIN_GP_PERCENT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_OFF_CATALOG_DATE__c</fullName>
        <label>CCU007F_OFF_CATALOG_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_OFF_PRICE_CODE__c</fullName>
        <label>CCU007F_OFF_PRICE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_OFF_PRICE_PC__c</fullName>
        <label>CCU007F_OFF_PRICE_PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_OFF_PRICE_ZONE__c</fullName>
        <label>CCU007F_OFF_PRICE_ZONE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ORDER_LIMIT__c</fullName>
        <label>CCU007F_ORDER_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_ORDER_REST_IND__c</fullName>
        <label>CCU007F_ORDER_REST_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PERIOD_END_TABLE__c</fullName>
        <label>CCU007F_PERIOD_END_TABLE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PO_REQUIRED_CODE__c</fullName>
        <label>CCU007F_PO_REQUIRED_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PRICE_PLAN_SEQ__c</fullName>
        <label>CCU007F_PRICE_PLAN_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PRICE_PLAN__c</fullName>
        <label>CCU007F_PRICE_PLAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PROC_DFT_DOLLAR_LIMIT__c</fullName>
        <label>CCU007F_PROC_DFT_DOLLAR_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PROC_DFT_ORDER_LIMIT__c</fullName>
        <label>CCU007F_PROC_DFT_ORDER_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PROC_DFT_TRAN_LIMIT__c</fullName>
        <label>CCU007F_PROC_DFT_TRAN_LIMIT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PRODUCT_XREF_NBR__c</fullName>
        <label>CCU007F_PRODUCT_XREF_NBR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PUR_FAX_CONT_SEQ__c</fullName>
        <label>CCU007F_PUR_FAX_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_PUR_PHONE_CONT_SEQ__c</fullName>
        <label>CCU007F_PUR_PHONE_CONT_SEQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REBATE_IND__c</fullName>
        <label>CCU007F_REBATE_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REGISTERED_ON_TIME__c</fullName>
        <label>CCU007F_REGISTERED_ON_TIME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_RELEASE_IND__c</fullName>
        <label>CCU007F_RELEASE_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_RELEASE_REQUIRED_CODE__c</fullName>
        <label>CCU007F_RELEASE_REQUIRED_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REPORTING_CONTACT__c</fullName>
        <label>CCU007F_REPORTING_CONTACT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REPORTING_IND__c</fullName>
        <label>CCU007F_REPORTING_IND</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REPORTING_LOC__c</fullName>
        <label>CCU007F_REPORTING_LOC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REPORT_DIST_FLAG__c</fullName>
        <label>CCU007F_REPORT_DIST_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_REST_KEY_CODE__c</fullName>
        <label>CCU007F_REST_KEY_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_SALESPERSON_ID__c</fullName>
        <label>CCU007F_SALESPERSON_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_SHIP_TO_REQUIRED_CODE__c</fullName>
        <label>CCU007F_SHIP_TO_REQUIRED_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_SIGNATURE_REQ__c</fullName>
        <label>CCU007F_SIGNATURE_REQ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_SPC_SERVICES_FLAG__c</fullName>
        <label>CCU007F_SPC_SERVICES_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_SUBSTITUTE_ALLOWED__c</fullName>
        <label>CCU007F_SUBSTITUTE_ALLOWED</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_TAKE_BACK_FLAG__c</fullName>
        <label>CCU007F_TAKE_BACK_FLAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_TERMS__c</fullName>
        <label>CCU007F_TERMS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_TIME_STAMP__c</fullName>
        <label>CCU007F_TIME_STAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_UPDATE_DATE__c</fullName>
        <label>CCU007F_UPDATE_DATE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_UPDATE_PROGRAM__c</fullName>
        <label>CCU007F_UPDATE_PROGRAM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_WHL_PRICE_CODE__c</fullName>
        <label>CCU007F_WHL_PRICE_CODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU007F_WHL_PRICE_PC__c</fullName>
        <label>CCU007F_WHL_PRICE_PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC007F_ACTION__c</fullName>
        <label>CXTC007F_ACTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC007F_AOPS_KEY1__c</fullName>
        <label>CXTC007F AOPS KEY1</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC007F_MSG_TYPE__c</fullName>
        <label>Message Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTC007F_TIMESTAMP__c</fullName>
        <label>CXTC007F_TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Status_Message__c</fullName>
        <label>Sync Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Account BSD Addendum</label>
    <nameField>
        <label>AOPS Account BSD Addendum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Account BSD Addendum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>